2001-11-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftp: Fixed bug #476729.

2001-11-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mime: Fixed bugs #477088, #472009.

2001-10-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri: Accepted patch #470211.

2001-10-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi: Fixed bug #464560.
	* ftp:  Fixed bug #466746.

2001-10-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tcllib moved to version 1.1
	
	* cmdline:	Version up to 1.1.1
	* ftp:		Version up to 2.2.1.
	* html:		Version up to 1.1.1
	* md5:		Version up to 1.4.1
	* mime/smtp:	Version up to 1.3
	* ncgi:		Version up to 1.2
	* pop3:		Version up to 1.5
	* report:	Version up to 0.2
	* sha1:		Version up to 1.0.1
	* struct:	Version up to 1.1.1
	* textutil:	Version up to 0.3

2001-10-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* csv.tcl: moved to v0.2

2001-09-24   Joe English  <jenglish@sourceforge.net>

	* modules/ftpd/ftpd.tcl: fix improperly-formatted multi-line 
	  replies.  See SF tracker ID #424797

2001-08-24   Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (check): Added target to report modules without
	  testsuites and/or manpages.

2001-08-22  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* examples/nntp: Added new example application 'postnews'. This is
	  an example how to use the 'nntp'-client library provided by
	  tcllib.

	* Makefile.in (MODULES):  Added package 'comm'.

2001-08-21  Don Porter <dgp@users.sourceforge.net>

	* Makefile.in (MODULES):  Added package 'control'.

2001-08-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (mandir, libdir): Applied patch [447141] by Reinhard
	  Max <rmax@users.sourceforge.net> to virtualize mandir and libdir
	  via ${INSTALL_ROOT}.

	* all.tcl: Added ::tcltest::getErrorMessage in preparation of
	  fixing [440051], [440049] and [440046] reported by Larry Virden