@@ -6,12 +6,13 @@
 # element name is the name of a command and the value is
 # a script that loads the command.
 
+set auto_index(::control::no-op) [list source [file join $dir no-op.tcl]]
+set auto_index(::control::CommandAsCaller) [list source [file join $dir rswitch.tcl]]
+set auto_index(::control::BodyAsCaller) [list source [file join $dir rswitch.tcl]]
+set auto_index(::control::rswitch) [list source [file join $dir rswitch.tcl]]
 set auto_index(::control::assert::EnabledAssert) [list source [file join $dir assert.tcl]]
 set auto_index(::control::assert::enabled) [list source [file join $dir assert.tcl]]
 set auto_index(::control::assert::callback) [list source [file join $dir assert.tcl]]
 set auto_index(::control::AssertSwitch) [list source [file join $dir assert.tcl]]
 set auto_index(::control::assert) [list source [file join $dir assert.tcl]]
-set auto_index(::control::no-op) [list source [file join $dir no-op.tcl]]
-set auto_index(::control::CommandAsCaller) [list source [file join $dir rswitch.tcl]]
-set auto_index(::control::BodyAsCaller) [list source [file join $dir rswitch.tcl]]
-set auto_index(::control::rswitch) [list source [file join $dir rswitch.tcl]]
+set auto_index(::control::do) [list source [file join $dir do.tcl]]
